syntax = "proto3";

import "proto/raft.proto";

package raft.service;

option go_package = "raft_service";

service Api {
  // Raft Meta-API.
  rpc StartShard(raft.StartShardRequest) returns (raft.StartShardResponse);
  rpc RemoveData(raft.RemoveDataRequest) returns (raft.RemoveDataResponse);
  rpc AddReplica(raft.AddReplicaRequest) returns (raft.AddReplicaResponse);
  rpc RemoveReplica(raft.RemoveReplicaRequest)
      returns (raft.RemoveReplicaResponse);
  rpc ListReplicas(raft.ListReplicasRequest)
      returns (raft.ListReplicasResponse);
  rpc SyncPropose(SyncProposeRequest) returns (SyncProposeResponse);
  rpc SyncRead(SyncReadRequest) returns (SyncReadResponse);
  rpc TransferLeadership(TransferLeadershipRequest)
      returns (TransferLeadershipResponse);

  // Data API.
  rpc Metadata(MetadataRequest) returns (MetadataResponse);
  rpc Read(ReadRequest) returns (stream ReadResponse);
  rpc FindMissing(FindMissingRequest) returns (FindMissingResponse);
  rpc GetMulti(GetMultiRequest) returns (GetMultiResponse);
}
